deploy/k8s/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: envanter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025  # SMTP
            - containerPort: 8025  # Web UI
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: envanter
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: ui
      port: 8025
      targetPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-ui
  namespace: envanter
spec:
  type: NodePort
  selector:
    app: mailhog
  ports:
    - port: 8025
      targetPort: 8025
      nodePort: 30833
