deploy/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envanter-web
  namespace: envanter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envanter-web
  template:
    metadata:
      labels:
        app: envanter-web
    spec:
      containers:
        - name: web
          image: ghcr.io/bhaslaman/envanter-web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: envanter-web
  namespace: envanter
spec:
  type: NodePort
  selector:
    app: envanter-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30830
